feat: add test for endpoints (trubles with PUT and time fields)
